change CV formatting

--- a/cv.html
+++ b/cv.html
@@ -2,41 +2,17 @@
 layout: main
 ---
 
+<p>I'm a backend developer from London with an interest in Python</p>
 
-
-<p>
-<strong>Peter White</strong>
-</p>
-<p>
-<strong>Chelmsford CM1 4DA</strong>
-</p>
-<p>
-                               <a href="mailto:petergswhite@gmail.com">petergswhite@gmail.com</a>	<a href="https://github.com/PeterGSWhite">github.com/PeterGSWhite</a>
-</p>
-<h1>Python Developer</h1>
-
-
-<p>
-Developer capable of creating new tech solutions, improving existing ones, and adopting new languages and tools.
-</p>
 <ul>
-
-<li>Python 3
-
-<li>PostgreSQL
-
-<li>HTML/CSS/Javascript
-<ul>
-
-<li>AWS
-
-<li>APIs
-
-<li>Docker
-</li>
+    <li>Python 3</li>
+    <li>PostgreSQL</li>
+    <li>HTML/CSS/Javascript</li>
+    <li>AWS</li>
+    <li>APIs</li>
+    <li>Docker</li>
 </ul>
-</li>
-</ul>
+
 <h1>Experience</h1>
 
 
@@ -71,9 +47,9 @@ The team I worked with was responsible for providing a data analytics product wh
 <h1><strong>Education</strong></h1>
 
 
-<p>
+<h2>
 <strong>University College London (2013 – 2016)</strong>
-</p>
+</h2>
 <ul>
 
 <li>2:1 BSc. Physics.
@@ -85,10 +61,10 @@ The team I worked with was responsible for providing a data analytics product wh
 <li>All physics modules required good problem solving and numerical skills.
 </li>
 </ul>
-<p>
-<strong>St John Payne Comprehensive School (2005 – 2012)</strong>
-</p>
-<h3><strong>A-Levels:</strong></h3>
+
+<h2>St John Payne Comprehensive School (2005 – 2012)</h2>
+
+<h3>A-Levels:</h3>
 
 
 <ul>
