change CV formatting

--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@ layout: main
 ---
 
 <p>I'm a backend developer from London with an interest in Python</p>
-
+<br/>
 <ul>
     <li>Python 3</li>
     <li>PostgreSQL</li>
@@ -12,9 +12,9 @@ layout: main
     <li>APIs</li>
     <li>Docker</li>
 </ul>
-
-<h1>Experience</h1>
-
+<br/>
+<h2>Experience</h2>
+<br/>
 
 <h2>Ampere Analysis - Python Developer (September 2016 - 2020)</h2>
 
@@ -44,8 +44,8 @@ The team I worked with was responsible for providing a data analytics product wh
 <li>I made a demo CRUD app for sharing regex snippets. It is built with Django rest framework and Vue JS. <a href="https://github.com/PeterGSWhite/reggitapi">https://github.com/PeterGSWhite/reggitapi</a>
 </li>
 </ul>
-<h1><strong>Education</strong></h1>
-
+<h2>Education</h2>
+<br/>
 
 <h2>
 <strong>University College London (2013 – 2016)</strong>
@@ -63,9 +63,9 @@ The team I worked with was responsible for providing a data analytics product wh
 </ul>
 
 <h2>St John Payne Comprehensive School (2005 – 2012)</h2>
-
+<br/>
 <h3>A-Levels:</h3>
-
+<br/>
 
 <ul>
 
