--- a/cv.html
+++ b/cv.html
@@ -3,8 +3,7 @@ layout: main
 ---
 
 <p>I'm a backend developer from London with an interest in Python</p>
-<br>
-<ul>
+<div>
     <li>Python 3</li>
     <li>PostgreSQL</li>
     <li>HTML/CSS/Javascript</li>
@@ -12,9 +11,10 @@ layout: main
     <li>APIs</li>
     <li>Docker</li>
 </ul>
-<br>
+</div>
+<div>
 <h2>Experience</h2>
-<br>
+</div>
 
 <h2>Ampere Analysis - Python Developer (September 2016 - 2020)</h2>
 
