change CV formatting

--- a/cv.html
+++ b/cv.html
@@ -12,9 +12,9 @@ layout: main
     <li>APIs</li>
     <li>Docker</li>
 </ul>
-<p></p>
+<p>&nbsp;</p>
 <h2>Experience</h2>
-<p></p>
+<p>&nbsp;</p>
 <h2>Ampere Analysis - Python Developer (September 2016 - 2020)</h2>
 
 
