change CV formatting

--- a/cv.html
+++ b/cv.html
@@ -1,9 +1,8 @@
 ---
 layout: main
 ---
-
+<div>
 <p>I'm a backend developer from London with an interest in Python</p>
-<p></p>
 <ul>
     <li>Python 3</li>
     <li>PostgreSQL</li>
@@ -12,10 +11,8 @@ layout: main
     <li>APIs</li>
     <li>Docker</li>
 </ul>
-<ul>
-</ul>
 <h2>Experience</h2>
-<p>&nbsp;</p>
+
 <h2>Ampere Analysis - Python Developer (September 2016 - 2020)</h2>
 
 
@@ -78,3 +75,4 @@ The team I worked with was responsible for providing a data analytics product wh
 <li>Economics: A
 </li>
 </ul>
+</div>
