change CV formatting

--- a/cv.html
+++ b/cv.html
@@ -2,7 +2,7 @@
 layout: main
 ---
 <div>
-    <h1><strong>Technologies</strong></h1>
+    <h1>Technologies</h1>
         <ul>        
             <li>Python 3</li>
             <li>PostgreSQL</li>
